syntax = "proto3";

package com.samt.usergroup;

option java_multiple_files = true;
option java_package = "com.samt.usergroup.grpc";
option java_outer_classname = "UserGroupServiceProto";

// ============================================================================
// User-Group Service gRPC Contract
// ============================================================================
// Purpose: Provide group and membership data to other microservices
// Consumer: Project Config Service, Sync Service, Report Service
// ============================================================================

service UserGroupGrpcService {
  // Get group by ID with basic info
  rpc GetGroup(GetGroupRequest) returns (GetGroupResponse);
  
  // Get group with full member details
  rpc GetGroupWithMembers(GetGroupRequest) returns (GetGroupWithMembersResponse);
  
  // Check if user is leader of a group
  rpc CheckGroupLeader(CheckGroupLeaderRequest) returns (CheckGroupLeaderResponse);
  
  // Check if user is member of a group (any role)
  rpc CheckGroupMember(CheckGroupMemberRequest) returns (CheckGroupMemberResponse);
  
  // Get all groups for a user (optionally filter by semester)
  rpc GetUserGroups(GetUserGroupsRequest) returns (GetUserGroupsResponse);
  
  // Verify group exists and is not deleted
  rpc VerifyGroupExists(VerifyGroupRequest) returns (VerifyGroupResponse);
}

// ============================================================================
// Messages
// ============================================================================

// ---------- GetGroup ----------

message GetGroupRequest {
  string group_id = 1;  // UUID as string
}

message GetGroupResponse {
  string group_id = 1;
  string group_name = 2;
  string semester = 3;
  string lecturer_id = 4;  // User ID from Identity Service
  string lecturer_name = 5;  // Cached from Identity Service
  int32 member_count = 6;
  string created_at = 7;  // ISO 8601 timestamp
  string updated_at = 8;  // ISO 8601 timestamp
}

// ---------- GetGroupWithMembers ----------

message GetGroupWithMembersResponse {
  string group_id = 1;
  string group_name = 2;
  string semester = 3;
  string lecturer_id = 4;
  string lecturer_name = 5;
  repeated GroupMember members = 6;
  string created_at = 7;
  string updated_at = 8;
}

message GroupMember {
  string user_id = 1;  // User ID from Identity Service
  string full_name = 2;  // Cached from Identity Service
  string email = 3;  // Cached from Identity Service
  GroupMemberRole role = 4;  // LEADER or MEMBER
}

enum GroupMemberRole {
  MEMBER = 0;
  LEADER = 1;
}

// ---------- CheckGroupLeader ----------

message CheckGroupLeaderRequest {
  string group_id = 1;  // UUID as string
  string user_id = 2;   // User ID to check
}

message CheckGroupLeaderResponse {
  bool is_leader = 1;
  string message = 2;  // Optional explanation (e.g., "User is LEADER", "User is MEMBER", "User not in group")
}

// ---------- CheckGroupMember ----------

message CheckGroupMemberRequest {
  string group_id = 1;  // UUID as string
  string user_id = 2;   // User ID to check
}

message CheckGroupMemberResponse {
  bool is_member = 1;
  GroupMemberRole role = 2;  // Only set if is_member = true
  string message = 3;  // Optional explanation
}

// ---------- GetUserGroups ----------

message GetUserGroupsRequest {
  string user_id = 1;
  string semester = 2;  // Optional filter (e.g., "2024-FALL")
}

message GetUserGroupsResponse {
  repeated UserGroupInfo groups = 1;
}

message UserGroupInfo {
  string group_id = 1;
  string group_name = 2;
  string semester = 3;
  GroupMemberRole role = 4;  // User's role in this group
  int32 member_count = 5;
}

// ---------- VerifyGroupExists ----------

message VerifyGroupRequest {
  string group_id = 1;  // UUID as string
}

message VerifyGroupResponse {
  bool exists = 1;
  bool deleted = 2;  // true if soft-deleted
  string message = 3;  // Optional explanation
}

// ============================================================================
// Error Handling
// ============================================================================
// gRPC Status Codes:
// - NOT_FOUND: Group or user not found
// - INVALID_ARGUMENT: Invalid UUID format or missing required fields
// - UNAVAILABLE: Database connection issues
// - DEADLINE_EXCEEDED: Operation timeout (default 3 seconds)
// ============================================================================
